--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 
 services:
     mysql:
-        image: mariadb:10
         container_name: mysql
         restart: always
-        ports:
-          - "3306:3306"
+        image: mariadb:10
         environment:
           - MYSQL_ROOT_PASSWORD=root
           - MYSQL_DATABASE=magento
+        ports:
+          - "3306:3306"
         volumes:
           - db-data:/var/lib/mysql
 
@@ -28,6 +28,36 @@ services:
         depends_on:
           - mysql
 
+    elasticsearch:
+      image: docker.elastic.co/elasticsearch/elasticsearch:6.7.0
+      volumes:
+        - es-data:/usr/share/elasticsearch/data
+      environment:
+        - cluster.name=magentosample
+        - xpack.security.enabled=false
+        - "ES_JAVA_OPTS=-Xms1G -Xmx1G"
+        - discovery.type=single-node
+        - http.port=9200
+        - http.cors.enabled=true
+        - http.cors.allow-origin=http://localhost:58595,http://127.0.0.1:58595
+        - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
+        - http.cors.allow-credentials=true
+        - bootstrap.memory_lock=true
+      ports:
+        - 9200:9200
+
+    kibana:
+      image: docker.elastic.co/kibana/kibana:6.7.0
+      ports:
+        - 8081:5601
+      environment:
+        - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+        - ELASTICSEARCH_USERNAME=admin
+        - ELASTICSEARCH_PASSWORD=admin
+        - XPACK_MONITORING_UI_CONTAINER_ELASTICSEARCH_ENABLED=false
+
 volumes:
     db-data:
+        external: false
+    es-data:
         external: false
